--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .ipynb_checkpoints/Analysis Plan-checkpoint.ipynb
 merged_file.txt
 .ipynb_checkpoints/MTA Data Analysis-checkpoint.ipynb
+.ipynb_checkpoints/MTA Data Analysis (Tahmid)-checkpoint.ipynb
