Created separate GeoJSON notebook and added file for March 30, 2019

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 merged_file.txt
 .ipynb_checkpoints/MTA Data Analysis-checkpoint.ipynb
 .ipynb_checkpoints/MTA Data Analysis (Tahmid)-checkpoint.ipynb
+.ipynb_checkpoints/GeoJSON Mapping-checkpoint.ipynb
