Adding extra analysis

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ merged_file.txt
 .ipynb_checkpoints/MTA Data Analysis-checkpoint.ipynb
 .ipynb_checkpoints/MTA Data Analysis (Tahmid)-checkpoint.ipynb
 .ipynb_checkpoints/GeoJSON Mapping-checkpoint.ipynb
+.DS_Store
+.ipynb_checkpoints/MTA Data Analysis-Copy1-checkpoint.ipynb
