Added to the GeoJSON Mapping

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ merged_file.txt
 .ipynb_checkpoints/GeoJSON Mapping-checkpoint.ipynb
 .DS_Store
 .ipynb_checkpoints/MTA Data Analysis-Copy1-checkpoint.ipynb
+~$Project 1 Group 8 Presentation v1.pptx
