Created new file with cleaned data
One year of data, fully cleaned except for outliers from diff

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ merged_file.txt
 .DS_Store
 .ipynb_checkpoints/MTA Data Analysis-Copy1-checkpoint.ipynb
 ~$Project 1 Group 8 Presentation v1.pptx
+.ipynb_checkpoints/MTADataAnalysis-checkpoint.ipynb
+.ipynb_checkpoints/MTADataAnalysis-FINAL-checkpoint.ipynb
+mta_datetime.pkl
