--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ merged_file.txt
 .ipynb_checkpoints/MTADataAnalysis-checkpoint.ipynb
 .ipynb_checkpoints/MTADataAnalysis-FINAL-checkpoint.ipynb
 mta_datetime.pkl
+.ipynb_checkpoints/MTADataAnalysis-Copy1-checkpoint.ipynb
